--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-	"name": "Inject sidebar",
+	"name": "BubbleUp",
 	"manifest_version": 2,
-	"description": "Inject a sidebar on the current tab when the page action is clicked",
-	"version": "0.2",
+	"description": "When you needed some distractions",
+	"version": "0.0",
 	"background": {
 		"page": "background.html"
 	},
 	"page_action": {
 		"default_icon": "icon.png",
-		"default_title": "Inject sidebar"
+		"default_title": "Bubble up your page"
 	},
 	"content_scripts": [
 		{
